@@ -1,44 +1,77 @@
 package com.tfg.angel.gameswap.backend.business.service.impl;
 
-import com.tfg.angel.gameswap.backend.business.dto.UsuarioDTO;
+import com.tfg.angel.gameswap.backend.business.dto.request.UsuarioRequestDTO;
+import com.tfg.angel.gameswap.backend.business.dto.response.UsuarioResponseDTO;
 import com.tfg.angel.gameswap.backend.business.mapper.UsuarioMapper;
 import com.tfg.angel.gameswap.backend.business.model.Usuario;
 import com.tfg.angel.gameswap.backend.business.repository.UsuarioRepository;
 import com.tfg.angel.gameswap.backend.business.service.UsuarioService;
-import com.tfg.angel.gameswap.backend.exception.ResourceNotFoundException;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class UsuarioServiceImpl implements UsuarioService {
 
     private final UsuarioRepository usuarioRepository;
 
-    public UsuarioServiceImpl(UsuarioRepository usuarioRepository) {
-        this.usuarioRepository = usuarioRepository;
+    @Override
+    public UsuarioResponseDTO crearUsuario(UsuarioRequestDTO dto) {
+
+        if (usuarioRepository.existsByCorreo(dto.getCorreo())) {
+            throw new RuntimeException("El correo ya está en uso");
+        }
+
+        if (usuarioRepository.existsByNUsuario(dto.getNUsuario())) {
+            throw new RuntimeException("El nombre de usuario ya existe");
+        }
+
+        Usuario usuario = UsuarioMapper.toEntity(dto);
+        usuario = usuarioRepository.save(usuario);
+
+        return UsuarioMapper.toDTO(usuario);
     }
 
     @Override
-    public List<UsuarioDTO> findAll() {
+    public UsuarioResponseDTO obtenerUsuarioPorId(Long id) {
+        Usuario usuario = usuarioRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+
+        return UsuarioMapper.toDTO(usuario);
+    }
+
+    @Override
+    public List<UsuarioResponseDTO> obtenerTodos() {
         return usuarioRepository.findAll()
-                .stream().map(UsuarioMapper::toDTO).collect(Collectors.toList());
+                .stream()
+                .map(UsuarioMapper::toDTO)
+                .toList();
     }
 
     @Override
-    public UsuarioDTO findById(Long id) {
-        Optional<Usuario> usuario = usuarioRepository.findById(id);
-        if (usuario.isPresent())
-            return UsuarioMapper.toDTO(usuario.get());
-        throw new ResourceNotFoundException("Usuario no encontrado");
+    public UsuarioResponseDTO actualizarUsuario(Long id, UsuarioRequestDTO dto) {
+
+        Usuario usuario = usuarioRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+
+        usuario.setNombre(dto.getNombre());
+        usuario.setNUsuario(dto.getNUsuario());
+        usuario.setFechaNacimiento(dto.getFechaNacimiento());
+        usuario.setCorreo(dto.getCorreo());
+
+        usuario = usuarioRepository.save(usuario);
+
+        return UsuarioMapper.toDTO(usuario);
     }
 
     @Override
-    public UsuarioDTO insert(UsuarioDTO usuarioDTO) {
-        Usuario usuario = UsuarioMapper.toEntity(usuarioDTO);
-        Usuario saved = usuarioRepository.save(usuario);
-        return UsuarioMapper.toDTO(saved);
+    public void eliminarUsuario(Long id) {
+        if (!usuarioRepository.existsById(id)) {
+            throw new RuntimeException("Usuario no encontrado");
+        }
+
+        usuarioRepository.deleteById(id);
     }
 }
